# gollum

./: AbstractAction.cpp  AbstractAction.h  CMakeLists.txt  CMakeSettings.json  Encrypt.cpp  Encrypt.h  FileManager.cpp  FileManager.h  Gollum.cpp  Gollum.h  GollumFileManager.cpp  GollumFileManager.h  GollumStrings.h  Models.h  README.txt
Actions/: AddAction.cpp  AddAction.h  ListAction.cpp  ListAction.h  RemoveAction.cpp  RemoveAction.h
Tests/: hello_test.cc
